--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/fav.png" />
+    <link rel="apple-touch-icon" href="/app.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Radio Cultural</title>
+
+    <!-- Metaetiquetas para Redes Sociales (Open Graph y Twitter) -->
+    <meta property="og:title" content="Radio Cultural" />
+    <meta property="og:description" content="La radio que te acompaña. Música, cultura y más." />
+    <meta property="og:image" content="/social-share.png" />
+    <meta property="og:url" content="/" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Radio Cultural" />
+    <meta name="twitter:description" content="La radio que te acompaña. Música, cultura y más." />
+    <meta name="twitter:image" content="/social-share.png" />
   </head>
   <body>
     <div id="root"></div>
