--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/fav.png" />
     <link rel="apple-touch-icon" href="/app.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Radio Cultural</title>
+        <title>Radio Cultural</title>
+    <meta name="description" content="La radio que te acompaña. Música, cultura y más." />
 
     <!-- Metaetiquetas para Redes Sociales (Open Graph y Twitter) -->
     <meta property="og:title" content="Radio Cultural" />
